<resources>
    <string name="app_name">Simple Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="facebook_app_id">277789886668240</string>
    <string name="fb_login_protocol_scheme">fb277789886668240</string>
    <string name="update_success">Update successfully!</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="wrong_new_password">New password is wrong</string>
    <string name="Save_password">Save Your Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_added">Last added</string>
    <string name="recently_played">Recently played</string>
    <string name="favorite">Favorite</string>
    <string name="num_song">\"Songs: \"</string>
    <string name="all_songs">ALL SONGS</string>
    <string name="search">Enter song name to search</string>
    <string name="options">Options</string>
    <string name="refresh">refresh</string>
    <string name="new_playlist">new playlist</string>
    <string name="set_timer">sleep timer</string>
    <string name="settings">settings</string>
    <string name="delete_playlist">delete playlist</string>
    <string name="add_songs">add song to playlist</string>
    <string name="play">play</string>
    <string name="songs">songs</string>
    <string name="artists">artists</string>
    <string name="albums">albums</string>
    <string name="playlists">playlists</string>
    <string name="enter_playlist_name">Please enter playlist name</string>
    <string name="success_add_playlist">add playlist successfully!</string>
    <string name="success_add_songs">all selected song added to playlist!</string>
    <string name="success_delete_playlist">delete playlist successfully!</string>
    <string name="confirm">CONFIRM</string>
    <string name="songs_to_add">SELECT SONGS</string>
    <string name="rename_playlist">rename playlist</string>
    <string name="delete_from_playlist">remove songs from playlist</string>
    <string name="add_to_playlist">add to playlist</string>
    <string name="deselect_selected_item">cancel selected item</string>
    <string name="seleted_playlist_song_deleted">Deleted selected songs from playlist!</string>
    <string name="add_song_to_this_playlist">add new songs to playlist</string>
    <string name="my_account">my account</string>
    <string name="enter_full">Please enter all fields</string>
    <string name="welcome">"Welcome "</string>
    <string name="facebook_logout">Your facebook account has logout!</string>
    <string name="wrong_account">Wrong account!</string>
    <string name="google_login_failed">Can\'t login with google</string>
    <string name="logout_success">Logout successfully</string>
    <string name="add_account_success">Account added successfully</string>
    <string name="account_existed">Account is existed!</string>
    <string name="wrong_again_pass">please retype password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="enter_pass_again">Enter new password again</string>
    <string name="change_password">Change password</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="enter_account_name">Enter account name</string>
    <string name="have_no_account">Have no account?</string>
    <string name="search_song_name">Enter song name </string>
    <string name="enter_new_playlist">Enter new playlist name</string>
    <string name="success_update_playlist">Update playlist successfully</string>
    <string name="add_selected_song_to_playlist">Add selected song to playlist</string>
    <string name="multi_select">select multiple songs</string>
    <string name="playlist_name_duplicate">Duplicate playlist name, please type again!</string>
    <string name="change_language">Language</string>
    <string name="english">English</string>
    <string name="tiengvn">Tiếng việt</string>
    <string name="timer">Time remaining</string>
    <string name="nav_header_title" translatable="false">Tran Xuan Luong</string>
    <string name="nav_header_subtitle" translatable="false">luongtx98@gmail.com</string>
    <string name="offline">Offline Music</string>
    <string name="online">Online Music</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="setting">Setting</string>
    <string name="color_theme">Color Theme</string>
    <string name="reset">Reset</string>
</resources>
