<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_main_setting"
        android:icon="@drawable/ic_option_menu"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"
        android:title="@string/options" >
        <menu>
            <item
                android:id="@+id/it_refresh"
                android:title="@string/refresh" />
            <item
                android:id="@+id/it_new_playlist"
                android:onClick="addNewPlaylist"
                android:title="@string/new_playlist" />
            <item
                android:id="@+id/it_sleep_timer"
                android:title="@string/set_timer" />
            <item
                android:id="@+id/it_shuffle"
                android:title="@string/settings" />
            <item
                android:id="@+id/it_delete_from_playlist"
                android:onClick="deleteFromPlaylist"
                android:title="@string/delete_from_playlist"
                android:visible="false" />
            <item
                android:id="@+id/it_add_to_playlist"
                android:title="@string/add_to_playlist"
                android:visible="false" />
            <item
                android:id="@+id/it_deselect_item"
                android:title="@string/deselect_selected_item"
                android:visible="false" />
        </menu>
    </item>

</menu>