<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:stretchColumns="*">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:onClick="skipLogin"
        android:src="@drawable/earbud" />

    <TableRow android:layout_margin="10dp">

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/acc" />

        <EditText
            android:id="@+id/etNameLogin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/enter_account_name"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="24sp" />
    </TableRow>

    <TableRow android:layout_margin="10dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/pass" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="24sp" />
    </TableRow>

    <Button
        android:id="@+id/button"
        android:layout_margin="10dp"
        android:background="#3F51B5"
        android:hint="@string/login"
        android:onClick="btnLogin"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_margin="10dp"
        android:background="#3F51B5" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_margin="10dp" />

    <TableRow android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv2"
            android:text="@string/have_no_account"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv3"
            android:layout_marginStart="10dp"
            android:onClick="btnSignUp"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="24sp" />
    </TableRow>

    <TableRow android:layout_marginTop="10dp">

        <TextView
            android:text="@string/change_language"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_column="1" />
    </TableRow>
</TableLayout>